# gogoclaw

./: .gitignore  2026 中国创新电子产品海外销售分析报告.docx  2026 中国创新电子产品海外销售分析报告.md  CONFIG_EDITOR_README.md  GATEWAY_DASHBOARD_README.md  Lesson_1_Alcohols_Introduction.docx  Lesson_2_Alcohol_Reactions.docx  Lesson_3_Alcohol_Tests.docx  Lesson_4_Carbonyl_Introduction.docx  Lesson_5_Carbonyl_Reactions.docx  Lesson_6_Carbonyl_Tests.docx  Lesson_7_Carboxylic_Acids.docx  Lesson_8_Esters_Acyl_Chlorides.docx  Lesson_Plan_1_A_Level_Chemistry.docx  Lesson_Plan_1_Hydroxyl_Carbonyl_Carboxylic.docx  Lesson_Plan_2_A_Level_Chemistry.docx  Lesson_Plan_2_Hydroxyl_Carbonyl_Carboxylic.docx  Lesson_Plan_3_A_Level_Chemistry.docx  Lesson_Plan_3_Hydroxyl_Carbonyl_Carboxylic.docx  Lesson_Plan_4_A_Level_Chemistry.docx  Lesson_Plan_4_Hydroxyl_Carbonyl_Carboxylic.docx  Lesson_Plan_5_A_Level_Chemistry.docx  Lesson_Plan_5_Hydroxyl_Carbonyl_Carboxylic.docx  Lesson_Plan_6_A_Level_Chemistry.docx  Lesson_Plan_6_Hydroxyl_Carbonyl_Carboxylic.docx  Lesson_Plan_7_A_Level_Chemistry.docx  Lesson_Plan_7_Hydroxyl_Carbonyl_Carboxylic.docx  Lesson_Plan_8_A_Level_Chemistry.docx  Lesson_Plan_8_Hydroxyl_Carbonyl_Carboxylic.docx  README.md  README_zh.md  REQUIREMENTS.md  TOOLS.md  create-lesson-plans-final.js  create-lesson-plans.js  create-report.js  gateway-dashboard-v2.html  gateway-dashboard-v3.html  gateway-dashboard-v4.html  gateway-dashboard.html  (+7 more)
.agents/: team-config.json
chemical-lims-demo/: DELIVERY_REPORT.md  GITLAB_STYLE_UI.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml
cli/: main.py
docs/: API.md  SRS.md
gogoclaw/: __init__.py
memory/: 2026-02-28-0138.md
scripts/: install.ps1  install.sh
tests/: test_channels.py  test_config.py  test_engine.py  test_gogoclaw.py  test_model_client.py  test_web_fetch.py
web/: README.md  index.html  requirements.txt  server.py  (+1 more)
(+61 files in other folders)
